--- a/serverless.yaml
+++ b/serverless.yaml
@@ -90,7 +90,8 @@ provider:
   name: aws
   region: us-west-2
   stage: dev
-  runtime: nodejs14.x
+  runtime: nodejs18.x
+  runtimeManagement: onFunctionUpdate
   architecture: x86_64
   memorySize: 512
   logRetentionInDays: 3653 # 10 years
@@ -185,7 +186,7 @@ functions:
 
   ddbToEs:
     timeout: 300
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Write DDB changes from `resource` table to ElasticSearch service'
     role: DdbToEsLambdaRole
     handler: ddbToEsLambda/index.handler
@@ -204,7 +205,7 @@ functions:
     timeout: 20
     memorySize: !If [isDev, 512, 1024]
     reservedConcurrency: !If [isDev, 10, 200]
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Match ddb events against active Subscriptions and emit notifications'
     role: SubscriptionsMatcherLambdaRole
     handler: src/subscriptions/matcherLambda/index.handler
@@ -223,7 +224,7 @@ functions:
   startExportJob:
     timeout: 30
     memorySize: 192
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Start the Glue job for bulk export'
     role: GlueJobRelatedLambdaRole
     handler: bulkExport/index.startExportJobHandler
@@ -233,7 +234,7 @@ functions:
   stopExportJob:
     timeout: 30
     memorySize: 192
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Stop the Glue job for bulk export'
     role: GlueJobRelatedLambdaRole
     handler: bulkExport/index.stopExportJobHandler
@@ -243,7 +244,7 @@ functions:
   getJobStatus:
     timeout: 30
     memorySize: 192
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Get the status of a Glue job run for bulk export'
     role: GlueJobRelatedLambdaRole
     handler: bulkExport/index.getJobStatusHandler
@@ -253,7 +254,7 @@ functions:
   updateStatus:
     timeout: 30
     memorySize: 192
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Update the status of a bulk export job'
     role: UpdateStatusLambdaRole
     handler: bulkExport/index.updateStatusStatusHandler
@@ -261,7 +262,7 @@ functions:
   uploadGlueScripts:
     timeout: 30
     memorySize: 192
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Upload glue scripts to s3'
     role: UploadGlueScriptsLambdaRole
     handler: bulkExport/uploadGlueScriptsToS3.handler
@@ -272,7 +273,7 @@ functions:
   updateSearchMappings:
     timeout: 300
     memorySize: 512
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Custom resource Lambda to update the search mappings'
     role: UpdateSearchMappingsLambdaRole
     handler: updateSearchMappings/index.handler
@@ -283,7 +284,7 @@ functions:
 
   subscriptionReaper:
     timeout: 30
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Scheduled Lambda to remove expired Subscriptions'
     role: SubscriptionReaperRole
     handler: src/subscriptions/reaperLambda/index.handler
@@ -295,7 +296,7 @@ functions:
 
   subscriptionsRestHook:
     timeout: 10
-    runtime: nodejs14.x
+    runtime: nodejs18.x
     description: 'Send rest-hook notification for subscription'
     role: RestHookLambdaRole
     handler: src/subscriptions/restHookLambda/index.handler
@@ -1295,3 +1296,4 @@ plugins:
   - serverless-bundle
   - serverless-offline
   - serverless-plugin-ifelse
+  - ./serverless_plugins/lambda-update-deprecated-runtime.js
