--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^26.0.19",
     "@types/jsonwebtoken": "^8.5.4",
-    "@types/node": "^18",
+    "@types/node": "18.19.10",
     "@types/sinon": "^9.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -81,7 +81,7 @@
     "tmp-promise": "^3.0.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^10.3.0",
-    "typescript": "^4.1.3",
+    "typescript": "4.4.3",
     "uuid": "^8.3.2",
     "wait-for-expect": "^3.0.2"
   },
