--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "fhir-works-on-aws-deployment",
   "version": "4.3.0",
@@ -33,81 +34,81 @@
     "serverless-info": "serverless info"
   },
   "dependencies": {
-    "@types/aws-lambda": "^8.10.92",
-    "aws-embedded-metrics": "^2.0.4",
-    "aws-sdk": "^2.1514.0",
-    "axios": "^1.6.2",
+    "@types/aws-lambda": "8.10.119",
+    "aws-embedded-metrics": "2.0.6",
+    "aws-sdk": "2.1545.0",
+    "axios": "1.6.2",
     "fhir-works-on-aws-authz-rbac": "link:../fhir-works-on-aws-authz-rbac",
     "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
     "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
     "fhir-works-on-aws-routing": "link:../fhir-works-on-aws-routing",
     "fhir-works-on-aws-search-es": "link:../fhir-works-on-aws-search-es",
-    "lodash": "^4.17.21",
-    "p-settle": "^4.1.1",
-    "serverless-http": "^3.2.0",
-    "tslib": "^2.3.1",
-    "yargs": "^16.2.0",
-	"cors": "^2.8.5",
-	"@types/cors": "^2.8.7"
+    "lodash": "4.17.21",
+    "p-settle": "4.1.1",
+    "serverless-http": "3.2.0",
+    "tslib": "2.6.0",
+    "yargs": "16.2.0",
+    "cors": "2.8.5",
+    "@types/cors": "2.8.13"
   },
   "devDependencies": {
-    "@types/chance": "^1.1.1",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^26.0.19",
-    "@types/jsonwebtoken": "^8.5.4",
+    "@types/chance": "1.1.3",
+    "@types/express": "4.17.17",
+    "@types/jest": "26.0.24",
+    "@types/jsonwebtoken": "8.5.9",
     "@types/node": "18.19.10",
-    "@types/sinon": "^9.0.0",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "chance": "^1.1.7",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
-    "jest-mock-extended": "^1.0.8",
-    "jsonwebtoken": "^8.5.1",
-    "prettier": "^2.4.1",
-    "qs": "^6.10.1",
-    "serverless": "^3.38.0",
-    "serverless-bundle": "^6.1.0",
-    "serverless-offline": "^12.0.0",
-    "serverless-step-functions": "^3.18.0",
-    "serverless-plugin-ifelse": "^1.0.7",
-    "sinon": "^9.0.2",
-    "tmp-promise": "^3.0.2",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^10.3.0",
+    "@types/sinon": "9.0.11",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "chance": "1.1.11",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "26.6.3",
+    "jest-circus": "26.6.3",
+    "jest-mock-extended": "1.0.18",
+    "jsonwebtoken": "8.5.1",
+    "prettier": "2.8.8",
+    "qs": "6.11.2",
+    "serverless": "3.38.0",
+    "serverless-bundle": "6.1.0",
+    "serverless-offline": "12.0.4",
+    "serverless-step-functions": "3.18.0",
+    "serverless-plugin-ifelse": "1.0.7",
+    "sinon": "9.2.4",
+    "tmp-promise": "3.0.3",
+    "ts-jest": "26.5.6",
+    "ts-node": "10.9.1",
     "typescript": "4.4.3",
-    "uuid": "^8.3.2",
-    "wait-for-expect": "^3.0.2"
+    "uuid": "8.3.2",
+    "wait-for-expect": "3.0.2"
   },
   "resolutions": {
-    "axios": "^0.21.4",
-    "tar": "^6.1.2",
-    "simple-git": "^3.3.0",
-    "dot-prop": "^5.1.1",
-    "minimist": "^1.2.6",
-    "bl": "^4.0.3",
-    "node-fetch": "^2.6.1",
-    "urijs": "^1.19.11",
-    "xmlhttprequest-ssl": "^1.6.2",
-    "postcss": "^8.2.10",
-    "underscore": "^1.12.1",
+    "axios": "1.6.2",
+    "tar": "6.1.15",
+    "simple-git": "3.19.1",
+    "dot-prop": "5.3.0",
+    "minimist": "1.2.8",
+    "bl": "4.1.0",
+    "node-fetch": "2.6.12",
+    "urijs": "1.19.11",
+    "xmlhttprequest-ssl": "1.6.3",
+    "postcss": "8.4.25",
+    "underscore": "1.13.6",
     "http-errors": "2.0.0",
-    "glob-parent": "^5.1.2",
-    "ws": "^7.4.6",
-    "trim-newlines": "^3.0.1",
-    "normalize-url": "^4.5.1",
-    "path-parse": "^1.0.7",
-    "set-value": "^4.0.1",
-    "ansi-regex": "^5.0.1",
-    "json-schema": "^0.4.0",
-    "nanoid": "^3.1.31",
-    "async": "^3.2.2",
+    "glob-parent": "5.1.2",
+    "ws": "7.5.9",
+    "trim-newlines": "3.0.1",
+    "normalize-url": "4.5.1",
+    "path-parse": "1.0.7",
+    "set-value": "4.1.0",
+    "ansi-regex": "5.0.1",
+    "json-schema": "0.4.0",
+    "nanoid": "3.3.6",
+    "async": "3.2.4",
     "moment": "2.29.2", 
     "triple-beam": "1.3.0"
   },
