--- a/auditLogMover/package.json
+++ b/auditLogMover/package.json
@@ -10,44 +10,44 @@
     "moment": "^2.29.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "aws-sdk-mock": "^5.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^26.6.3",
-    "serverless": "^3.3.0",
-    "serverless-bundle": "^6.0.0",
-    "serverless-step-functions": "^3.13.1",
-    "sinon": "^9.0.2",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "@types/jest": "26.0.24",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "aws-sdk-mock": "5.4.0",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "26.6.3",
+    "serverless": "3.38.0",
+    "serverless-bundle": "6.1.0",
+    "serverless-step-functions": "3.18.0",
+    "sinon": "9.2.4",
+    "ts-jest": "26.5.6",
+    "typescript": "4.4.3"
   },
   "resolutions": {
-    "tar": "^6.1.2",
-    "dot-prop": "^5.1.1",
-    "simple-git": "^3.3.0",
-    "minimist": "^1.2.6",
-    "bl": "^4.0.3",
-    "node-fetch": "^2.6.1",
-    "axios": "^0.21.4",
-    "xmlhttprequest-ssl": "^1.6.2",
-    "underscore": "^1.12.1",
-    "postcss": "^8.2.10",
-    "glob-parent": "^5.1.2",
-    "ws": "^7.4.6",
-    "trim-newlines": "^3.0.1",
-    "normalize-url": "^4.5.1",
-    "path-parse": "^1.0.7",
-    "set-value": "^4.0.1",
-    "ansi-regex": "^5.0.1",
-    "json-schema": "^0.4.0",
-    "nanoid": "^3.1.31",
-    "async": "3.2.2"
+    "tar": "6.1.15",
+    "dot-prop": "5.3.0",
+    "simple-git": "3.19.1",
+    "minimist": "1.2.8",
+    "bl": "4.1.30",
+    "node-fetch": "2.6.12",
+    "axios": "1.6.2",
+    "xmlhttprequest-ssl": "1.6.3",
+    "underscore": "1.13.6",
+    "postcss": "8.4.25",
+    "glob-parent": "5.1.2",
+    "ws": "7.5.9",
+    "trim-newlines": "3.0.1",
+    "normalize-url": "4.5.1",
+    "path-parse": "1.0.7",
+    "set-value": "4.1.0",
+    "ansi-regex": "5.0.1",
+    "json-schema": "0.4.0",
+    "nanoid": "3.3.6",
+    "async": "3.2.4"
   },
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
