--- a/cloudformation/elasticsearch.yaml
+++ b/cloudformation/elasticsearch.yaml
@@ -96,14 +96,11 @@ Resources:
   ElasticSearchDomain:
     Type: AWS::Elasticsearch::Domain
     DependsOn: SearchLogResourcePolicy
-    Metadata:
-      cfn_nag:
-        rules_to_suppress:
-          - id: W90
-            reason: 'We do not want a VPC for ElasticSearch. We are controlling access to ES using IAM roles'
     UpdatePolicy:
       EnableVersionUpgrade: true
     Properties:
+      DomainEndpointOptions:
+        EnforceHttps: true
       EBSOptions:
         # Assuming ~100GB storage requirement for PROD; min storage requirement is ~290GB https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/sizing-domains.html
         # If you change the size of the Elasticsearch Domain, consider also updating the NUMBER_OF_SHARDS on the updateSearchMappings resource
@@ -172,6 +169,11 @@ Resources:
         INDEX_SLOW_LOGS:
           CloudWatchLogsLogGroupArn: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${AWS::StackName}-search-logs:*"
           Enabled: true
+      VPCOptions:
+        SecurityGroupIds:
+          - subnet-08678bea53d30a486
+        SubnetIds:
+          - sg-0688fd15ffae13476
   UpdateSearchMappingsCustomResource:
     DependsOn: ElasticSearchDomain
     Type: AWS::CloudFormation::CustomResource
