fix: EnforceHTTPS case

--- a/cloudformation/elasticsearch.yaml
+++ b/cloudformation/elasticsearch.yaml
@@ -100,7 +100,7 @@ Resources:
       EnableVersionUpgrade: true
     Properties:
       DomainEndpointOptions:
-        EnforceHttps: true
+        EnforceHTTPS: true
       EBSOptions:
         # Assuming ~100GB storage requirement for PROD; min storage requirement is ~290GB https://docs.aws.amazon.com/elasticsearch-service/latest/developerguide/sizing-domains.html
         # If you change the size of the Elasticsearch Domain, consider also updating the NUMBER_OF_SHARDS on the updateSearchMappings resource
