--- a/serverless.yaml
+++ b/serverless.yaml
@@ -1004,6 +1004,11 @@ resources:
                       - 'es:ESHttpHead'
                     Resource:
                       - !Join ['', [!GetAtt ElasticSearchDomain.Arn, '/*']]
+                  - Effect: Allow
+                    Action:
+                      - ec2:CreateNetworkInterface
+                    Resource:
+                      - '*'
             - PolicyName: 'KMSPolicy'
               PolicyDocument:
                 Version: '2012-10-17'
