fix: Add ec2:DeleteNetworkInterface permissions to UpdateSearchMappingsLambdaRole

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -1008,6 +1008,7 @@ resources:
                     Action:
                       - ec2:CreateNetworkInterface
                       - ec2:DescribeNetworkInterfaces
+                      - ec2:DeleteNetworkInterface
                     Resource:
                       - '*'
             - PolicyName: 'KMSPolicy'
