--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "serverless": "^3.38.0",
     "serverless-bundle": "^6.1.0",
     "serverless-offline": "^12.0.0",
-    "serverless-step-functions": "^3.18.0",
+    "serverless-step-functions": "3.18.0",
     "serverless-plugin-ifelse": "^1.0.7",
     "sinon": "^9.0.2",
     "tmp-promise": "^3.0.2",
