--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "fhir-works-on-aws-search-es": "link:../fhir-works-on-aws-search-es",
     "lodash": "^4.17.21",
     "p-settle": "^4.1.1",
-    "serverless-http": "^3.2.0",
+    "serverless-http": "3.2.0",
     "tslib": "^2.3.1",
     "yargs": "^16.2.0",
-	"cors": "^2.8.5",
-	"@types/cors": "^2.8.7"
+    "cors": "^2.8.5",
+    "@types/cors": "^2.8.7"
   },
   "devDependencies": {
     "@types/chance": "^1.1.1",
@@ -72,11 +72,11 @@
     "jsonwebtoken": "^8.5.1",
     "prettier": "^2.4.1",
     "qs": "^6.10.1",
-    "serverless": "^3.38.0",
-    "serverless-bundle": "^6.1.0",
-    "serverless-offline": "^12.0.0",
-    "serverless-step-functions": "3.18.0",
-    "serverless-plugin-ifelse": "^1.0.7",
+    "serverless": "3.39.0",
+    "serverless-bundle": "6.3.1",
+    "serverless-offline": "12.0.4",
+    "serverless-step-functions": "3.21.1",
+    "serverless-plugin-ifelse": "1.0.7",
     "sinon": "^9.0.2",
     "tmp-promise": "^3.0.2",
     "ts-jest": "^26.4.4",
