--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.92",
     "aws-embedded-metrics": "^2.0.4",
-    "aws-sdk": "^2.1514.0",
+    "aws-sdk": "2.1692.0",
     "axios": "^1.6.2",
     "fhir-works-on-aws-authz-rbac": "link:../fhir-works-on-aws-authz-rbac",
     "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
